# qmsspkg_cp

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/qmsspkg_cp/: __init__.py  qmsspkg_cp.py
tests/: test_qmsspkg_cp.py
